# sentinel-minipot

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Makefile  Makefile.am  README.md  char_consts.h  child.c  child.h  cli_opts.c  cli_opts.h  configure.ac  default.h  ftp.c  ftp.h  ftp_commands.gperf  gperf.am  http.c  http.h  http_header.gperf  http_method.gperf  http_tr_enc.gperf  log.c  log.h  main.c  master_pipe.c  master_pipe.h  messages.c  messages.h  minipot_config.h  minipot_pipe.c  minipot_pipe.h  proxy.c  proxy.h  sasl_mechanisms.gperf  smtp.c  smtp.h  smtp_commands.gperf  telnet.c  (+5 more)
.gitlab-ci/: Dockerfile  release.sh
doc/: ftp.md  generated_sentinel_messages.md  http.md  main.md  smtp.md  telnet.md
src/: Makefile.am  char_consts.h  child.h  ftp.c  ftp_commands.gperf  http.c  http.h  http_header.gperf  log.c  main.c  master_pipe.c  master_pipe.h  minipot_pipe.c  minipot_pipe.h  sasl_mechanisms.gperf  service_data.h  smtp.c  smtp.h  smtp_commands.gperf  telnet.c  telnet.h  utils.c  utils.h
tests/: Makefile.am  README.md  run_minipots_for_test.sh
tests/integration/: README.md  client.py  ftp.py  ftpv2.py  http.py  httpv2.py  proxy.py  run_ftp_tests.py  run_ftp_tests_from_unpacker.py  run_ftpv2_tests.py  run_http_tests.py  run_http_tests_from_unpacker.py  run_httpv2_tests.py  run_smtp_tests.py  run_smtp_tests_from_minipots.py  run_smtp_tests_from_unpacker.py  run_smtpv2_tests.py  run_telnet_tests.py  run_telnet_tests_from_minipots.py  run_telnet_tests_from_unpacker.py  run_throughput_test.py  smtp.py  smtpv2.py  telnet.py  test.py  utils.py
tests/integration/doc/: integration-testing-architecture.drawio  main.md
tests/integration/framework/: client.py  out_capture.py  proxy.py  test.py  utils.py
tests/manual/: README.md  manual_proxy.py  run_manual_proxy.sh
tests/unit/: Makefile.am  check_sentinel_msg.c  check_serv_data.c  concat_str.c  find_first_occur.c  pack_sentinel_msg.c  skip_sel_bytes.c  tests.c  tokenize.c  unit_tests.c  utils.c
